# data_site

./: .pylintrc  index.html  pyproject.toml  requirements.txt
files/: find_other_tokens.txt  ideas.txt  site_structure.xlsx  tools.xlsx
files/data/2024_03/greenhouse/: coinbase.json
files/data/2024_03/lever/: matchgroup.json  palantir.json
files/master_data/: ats_company.xlsx  ats_job_board.xlsx  find_other_tokens.txt  greenhouse_board_tokens.txt  lever_board_tokens.txt
files/resources/: Gartner Reprint (4_1_2024 6_40_34 PM).u.zip.html  The Forrester Wave™_ Augmented Business Intelligence Platforms, Q2 2023 (4_1_2024 6_33_48 PM).u.zip.html
menu1/menu1/: index.html
menu2/menu2/: index.html
src/: analytics.py  constants.py  db.py  log_config.json  logutil.py  scraper.py  utils.py
src/mkdocs_site/: mkdocs.yml
src/mkdocs_site/overrides/partials/: header.html
src/mkdocs_site/site/: 404.html
src/sql/first_setup/: load_excel_file.sql
src/sql/with_commit/: insert_scrape_log.sql
src/sql/without_commit/: select_ats_job_board.sql  select_ats_job_board_to_scrape.sql
