[tool.poetry]
name = "data-site"
version = "0.1.0"
description = ""
authors = ["Karburator Neun <l@l>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.15"
mkdocs-awesome-pages-plugin = "^2.9.2"
sqlalchemy = "^2.0.29"
pyodbc = "^5.1.0"
pylint = "^3.1.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
